# piplup

./: Cargo.toml  font_atlas.pgm
.github/workflows/: rust.yml
shaders/: 2D_fragment_shader.frag  2D_fragment_shader.spv  2D_texture_fragment_shader.frag  2D_texture_fragment_shader.spv  2D_vertex_shader.spv  2D_vertex_shader.vert  3_pos_vertex.spv  3_pos_vertex.vert  scene_data_mesh.frag  scene_data_mesh.vert  scene_data_mesh.vert.spv
src/: app.rs  lib.rs  main.rs  renderer.rs
src/components/: allocated_image.rs  allocation_types.rs  buffers.rs  command_buffers.rs  deletion_queue.rs  descriptors.rs  device.rs  frame_data.rs  image_util.rs  instance.rs  memory_allocator.rs  mod.rs  pipeline.rs  queue.rs  render_pass.rs  sampler.rs  surface.rs  swapchain.rs  swapchain_support_details.rs  util.rs
src/components/geom/: vertex.rs
src/egui/: image_information_data.rs  integration.rs  mod.rs
src/geom/: asset.rs  assets.rs  mesh.rs  mod.rs  push_constants.rs  scene.rs  vertex_2d.rs  vertex_3d.rs
src/macros/: new.rs
src/misc/: camera.rs  material.rs  mod.rs  render_object.rs
