[package]
name = "piplup"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
cgmath = "0.18.0"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"]}
image = { version = "0.25", features = ["jpeg", "png"] } 
env_logger = "0.11.8"
log = "0.4.27"
muda = "0.16.1"
serde = "1.0.219"
tokio = "1.44.2"
vk-mem = "0.4.0"
winit = "0.30.9"
anyhow = "1.0.98"
thiserror = "2.0.12"
ndarray = "0.16.1"
nalgebra = "0.33.2"
